<resources>
    <string name="app_name" translatable="false">Pokémap</string>
    <string name="action_settings">Settings</string>
    <string name="action_clearmap">Clear Map</string>
    <string name="action_logout">Logout</string>
    <string name="pref_file_key" translatable="false">com.omkarmoghe.pokemap.PREFERENCE_FILE_KEY</string>
    <string name="pref_theme">PresetTheme</string>
    <string name="pref_theme_no_action_bar" translatable="false">PresetThemeNoAb</string>
    <string name="logout_prompt_message">Are you sure you want to log out?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="pref_cat_user_account">User Account</string>
    <string name="pref_warning">NOTE: Do NOT use your main account for this application!
        Instead, create and use a fake Pokémon Trainer Club account with a different password and email.</string>
    <string name="pref_username">Set Username</string>
    <string name="pref_username_key" translatable="false">UsernameKey</string>
    <string name="pref_default_username">John Doe</string>
    <string name="pref_password">Set Password</string>
    <string name="pref_password_key" translatable="false">PasswordKey</string>
    <string name="pref_default_password" translatable="false">***</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_pokestops_title">Show Pokéstops</string>
    <string name="pref_pokestops_key" translatable="false">pokestops_checkbox</string>
    <string name="pref_gyms_title">Show Gyms</string>
    <string name="pref_gyms_key" translatable="false">gyms_checkbox</string>
    <string name="pref_scanned_title">Show Scanned Locations</string>
    <string name="pref_scanned_key" translatable="false">scanned_checkbox</string>
    <string name="pref_pokemons_to_show_key" translatable="false">pokemons_to_show</string>
    <string name="pref_search_steps">Search steps</string>
    <string name="pref_search_steps_key" translatable="false">search_steps</string>
    <string name="pre_lured_key" translatable="false">lured_checkbox</string>
    <string name="pref_lured_title">Show Lured Pokémon</string>
    <string name="pokestop" translatable="false">Pokéstop</string>
    <string name="pref_cat_service">Background Service</string>
    <string name="pref_service_enable_title">Enable</string>
    <string name="pref_service_enable_key" translatable="false">background_poke_service</string>
    <string name="pref_service_refresh_title">Refresh Rate</string>
    <string name="pref_service_refresh_summary">How often the service will update in seconds.</string>
    <string name="pref_service_refresh_key" translatable="false">service_refresh_rate</string>
    <string name="pref_cat_other">Other</string>
    <string name="pref_theme_button">Theme</string>
    <string name="pref_theme_button_key" translatable="false">ThemeKey</string>
    <string name="pref_directions_button">Directions</string>
    <string name="pref_directions_button_key" translatable="false">DirectionsKey</string>
    <string name="toast_credentials">Can\'t login. Please check your credentials</string>
    <string name="title_activity_poke_map">Pokémon Nearby</string>
    <string name="login_warning"><Data><![CDATA[
    As using this app could result in your account being <b>banned</b> it is recommended to use a Google account not attached to your Pokémon Go account.
    Instead create and use a fake Pokémon Trainer Club (PTC) account with a different password and email.
    ]]></Data></string>
    <string name="prompt_username">PTC Username</string>
    <string name="prompt_password">PTC Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">Field Required</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_warning_title">Warning:</string>
    <string name="request_credentials_title">Insert your Pokémon Go credentials</string>
    <string name="search_pokemon_map_suggestion">(Long press on map to change searching position)</string>
    <string name="default_string">Default</string>
    <string name="pokemon_to_show">Pokémon to show (filter)</string>
    <string name="action_relogin">Relogin</string>
    <string name="ban">banned</string>
    <string name="minutes">"minutes"</string>
    <string name="pokemon_will_spawn">will spawn here, scan again in a while</string>
    <string name="pokemon_disappearing_in">"Disappearing in: "</string>
    <string name="pokemon_expired">Expired</string>
    <string name="position_picked">Position Picked</string>
    <string name="seconds">"s"</string>
    <string name="toast_localization_waiting">Waiting for Position&#8230;</string>
    <string name="toast_login_successful">Login successful.</string>
    <string name="toast_map_not_initialized">Problem Initializing Google Map</string>
    <string name="toast_server_unreachable">Unable to contact the Pokémon GO servers. The servers may be down.</string>
    <string name="toast_token_expired">The Login token has expired. Getting a new one.</string>
    <string name="toast_user_found">Found You!</string>
    <string name="toast_login_error">Failed to Login.</string>
    <string name="toast_internal_error">An internal error occurred. This might happen when you are offline or the servers are down.</string>
    <string name="toast_ptc_login_error">PTC login failed</string>
    <string name="toast_google_login_error">Google login failed</string>
    <string name="enable_location_permission_title">Enable Location Permission</string>
    <string name="enable_location_permission_message">Please enable location permission to use this application</string>
    <string name="toast_no_location">Failed to Find GPS Location</string>
    <string name="expiring_in">Expires in: %1$d:%2$02d</string>
    <string name="google_login_failed">Google login failed</string>
    <string name="permition_message">Please allow locations in order to use the app</string>
    <string name="allow">Allow</string>
    <string name="app_settings">App Settings</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="toast_searching">Searching&#8230;</string>
    <string name="toast_pokemon_found_count">"Pokémon found"</string>
    <string name="pokemon_found_none">No new catchable Pokémon have been found.</string>
    <string name="pokemon_found_new">%1$d new catchable Pokémon found.</string>
    <string name="notification_service_title">Pokémap Service</string>
    <string name="notification_service_scanning">Scanning</string>
    <string name="notification_service_stop">Stop Service</string>
    <string name="notification_service_pokemon_near">%1$d Pokémon nearby.</string>
    <string name="notification_service_pokemon_in_area">%1$d Pokémon in area:</string>
    <string name="meters">meters</string>
    <string name="gym">Gym</string>
    <string name="button_ok">Ok</string>
    <string name="notification_service_inbox_line">%1$s (%2$d minutes, %3$d meters)</string>
    <string name="toast_still_searching">Searching&#8230; found %1$d Pokémon so far.</string>
    <string name="preset_themes_title">Preset Themes</string>
    <string name="theme_activity_text">Will make this selection look pretty in the future. Select a theme:</string>
    <string name="settings_directions_title">Directions</string>
    <string name="settings_directions_key_required">A Google Server API Key is required in order to use the directions API.</string>
    <string name="settings_directions_key_explanation">Create or select a project and enable the Google Maps Directions API. Add a SERVER API Key and paste the key in the input field below.</string>
    <string name="settings_directions_api_console">Google API Console</string>
    <string name="settings_directions_input_hint">Server API key</string>
    <string name="settings_directions_input_imeaction">Register</string>
    <string name="settings_directions_button_register">Register</string>
    <string name="settings_directions_button_note">The key might take up to 5 minutes to activate</string>
    <string name="settings_directions_error_key_empty">API Key required</string>
    <string name="settings_directions_success_key_set">Server API Key registered</string>
    <string name="directions_error_key_not_set">Directions Server API Key not set</string>
    <string name="directions_error_route_options_failed">Failed to get options for route</string>
    <string name="directions_error_directions_failed">Failed to get directions</string>
    <string name="directions_meters_short">%1$sm</string>
    <string name="directions_minutes_short">%1$smin</string>
</resources>