<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_directions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.omkarmoghe.pokemap.views.settings.ThemeActivity">

    <TextView
        android:text="@string/settings_directions_key_required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:text="@string/settings_directions_key_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/txt_api_console"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inp_directions_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_directions_input_hint"
            android:imeActionLabel="@string/settings_directions_input_imeaction"
            android:imeOptions="actionGo"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register_directions_api"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_directions_button_register"
        android:textStyle="bold" />

    <TextView
        android:text="@string/settings_directions_button_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Small"/>

</LinearLayout>
