<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:text="@string/permition_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_margin="10dp"
            android:text="@string/allow"
            android:id="@+id/allowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_margin="10dp"
            android:text="@string/app_settings"
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>